--- a/style.css
+++ b/style.css
@@ -1,1 +1,41 @@
+* {
+  font-family: 'Outfit', sans-serif;
+  color: hsl(215, 51%, 70%);
+}
 
+hr {
+  border-color: hsl(215, 51%, 70%);
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: hsl(217, 54%, 11%);
+}
+
+.card {
+  max-width: 320px;
+  background-color: hsl(216, 50%, 16%);
+  color: white;
+  margin: 10px 10px 10px 10px; 
+  border-radius: 12px; 
+  padding: 25px; 
+}
+
+img {
+  display: flex;
+  max-width: 100%;
+  border-radius: 12px;
+}
+
+.credentials {
+  text-align: center;
+}
+.price {
+  display: flex; 
+  flex-direction: row; 
+  justify-content: space-between; 
+}
