--- a/style.css
+++ b/style.css
@@ -31,6 +31,20 @@ h3 {
   color: white;
   }
 
+h3:hover {
+    color: hsl(178, 100%, 50%);
+    cursor: pointer;
+}
+
+.name {
+    color: white;
+}
+
+.name:hover {
+    color: hsl(178, 100%, 50%);
+    cursor: pointer;
+}
+
 .credentials {
   text-align: center;
 }
